--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,16 @@
 </head>
 <body>
 
-
+<div class="btn-group">
   <% if user_signed_in? %>
+    <br><%= image_tag current_user.avatar.url(:thumb) %>
+    <br>Welcome <%= current_user.email %><br>
     <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-    <% else %>
-    <%= link_to "Sign in", new_user_session_path %>
-    <%= link_to "Sign up", new_user_registration_path %>
+  <% else %>
+    <%= link_to "Sign in", new_user_session_path, :style => "display: none;" %>
+    <%= link_to "Sign up", new_user_registration_path, :style => "display: none;" %>
   <% end %>
+  </div>
 
    <%= notice %>
    <%= alert %>
