--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,10 @@
   <%= devise_error_messages! %>
 
   <div class="field">
+    <p><%= f.label :username %><br />
+    <%= f.text_field :username %></p>
+    <p><%= f.label :full_name %><br />
+    <%= f.text_field :full_name %></p>
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
@@ -25,7 +29,6 @@
     Add Your <%= f.label :avatar %>:
     <%= f.file_field :avatar %>
   </div>
-
 
   <div class="actions">
     <%= f.submit "Sign up" %>
